--- a/Android/BikeBuds/app/build.gradle
+++ b/Android/BikeBuds/app/build.gradle
@@ -22,4 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    //compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.google.android.gms:play-services-maps:6.5.87'
+    compile 'com.google.android.gms:play-services-location:6.5.87'
 }
