--- a/Android/BikeBuds/app/src/main/AndroidManifest.xml
+++ b/Android/BikeBuds/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dudeofawesome.bikebuds" >
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -16,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <!--<activity-->
             <!--android:name=".BikingActivity"-->
             <!--android:label="@string/title_activity_biking" >-->
