Image and location API
Added the image…. realized i wasn’t fully awake and didn’t upload it…
>.> … and i also added some things to the locations
~Michelle Tjoa

--- a/Android/BikeBuds/app/src/main/AndroidManifest.xml
+++ b/Android/BikeBuds/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dudeofawesome.bikebuds" >
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!-- To recieve and get hte location-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -23,6 +26,9 @@
             <!--android:name=".BikingActivity"-->
             <!--android:label="@string/title_activity_biking" >-->
         <!--</activity>-->
+        <service
+            android:name=".FetchAddressIntentService"
+            android:exported="false" />
     </application>
 
 </manifest>
