--- a/Android/BikeBuds/app/src/main/AndroidManifest.xml
+++ b/Android/BikeBuds/app/src/main/AndroidManifest.xml
@@ -8,17 +8,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".BikingActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".BikeActivity"
-            android:label="@string/title_activity_bike"
+            android:label="@string/title_activity_biking"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
