--- a/Android/BikeBuds/app/src/main/AndroidManifest.xml
+++ b/Android/BikeBuds/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dudeofawesome.bikebuds" >
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- To recieve and get hte location-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.LOCATION_HARDWARE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".BikingActivity"
+            android:name=".BikeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,12 +25,9 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <!--<activity-->
-            <!--android:name=".BikingActivity"-->
+            <!--android:name=".BikeActivity"-->
             <!--android:label="@string/title_activity_biking" >-->
         <!--</activity>-->
-        <service
-            android:name=".FetchAddressIntentService"
-            android:exported="false" />
     </application>
 
 </manifest>
