--- a/Android/BikeBuds/app/build.gradle
+++ b/Android/BikeBuds/app/build.gradle
@@ -20,10 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.github.nkzawa:socket.io-client:0.4.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     //compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.github.nkzawa:socket.io-client:0.4.1'
+    compile 'com.mikepenz.iconics:library:0.7.5@aar'
+    compile 'com.mikepenz.materialdrawer:library:2.6.5@aar'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
     compile 'com.google.android.gms:play-services-location:6.5.87'
+    compile 'com.android.support:support-v4:22.0.0'
 }
