--- a/Android/BikeBuds/app/src/main/AndroidManifest.xml
+++ b/Android/BikeBuds/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dudeofawesome.bikebuds" >
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <!-- To recieve and get hte location-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- To recieve and get hte location -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +18,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,15 +30,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.dudeofawesome.bikebuds.MainActivity" />
         </activity>
-        <meta-data android:name="com.google.android.gms.version"
+
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        <!--<activity-->
-            <!--android:name=".BikingActivity"-->
-            <!--android:label="@string/title_activity_biking" >-->
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".BikingActivity" -->
+        <!-- android:label="@string/title_activity_biking" > -->
+        <!-- </activity> -->
         <service
             android:name=".FetchAddressIntentService"
             android:exported="false" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
